--- a/GigHub/GigHub/Content/Site.css
+++ b/GigHub/GigHub/Content/Site.css
@@ -22,3 +22,77 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/*////////////////////////
+    Bootstrap Overrides
+////////////////////////*/
+
+.navbar-inverse {
+    background-color: #ff4342;
+    border-color: #ff9998;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: #ffffff;
+}
+
+.navbar-inverse .navbar-brand {
+    color: #ffffff;
+}
+
+.field-validation-error {
+    font-size: 14px;
+    margin-left: 15px;
+}
+
+h2,
+.h2 {
+    font-family: Arial;
+    font-size: 20px;
+    margin-top: 12px;
+    margin-bottom: 40px;
+    margin-left: 30px;
+}
+
+.form-group {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.form-control {
+    font-size: 17px;
+    padding: 20px 20px;
+    -ms-border-radius: 15px;
+    border-radius: 15px;
+}
+
+.btn-lg {
+    padding: 5px 19px;
+    font-size: 18px;
+    line-height: 1.33;
+    -ms-border-radius: 15px;
+    border-radius: 15px;
+}
+
+.btn-danger {
+    color: #ffffff;
+    background-color: #ff4342;
+    border-color: #ff9291;
+}
+
+.navbar > .container .navbar-brand {
+    margin-left: 15px;
+    font-family: Monoton;
+    font-size: 35px;
+}
+
+.navbar-nav {
+    font-family: Montserrat;
+    font-size: 18px;
+    margin-left: 25px;
+}
+
+.navbar-right {
+    font-family: Nunito;
+    font-size: 15px;
+}
