--- a/GigHub/GigHub/Views/Gigs/Create.cshtml
+++ b/GigHub/GigHub/Views/Gigs/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@model GigHub.ViewModels.GigFormViewModel
 @{
     ViewBag.Title = "Add a gig";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Add a new Gig:</h2>
