--- a/GigHub/GigHub/Content/Site.css
+++ b/GigHub/GigHub/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 90px;
     padding-bottom: 20px;
 }
 
@@ -140,3 +140,56 @@ select.form-control {
         text-decoration: none;
         background-color: #fafafa;
     }
+
+/*////////////////////////
+    Page-level styles
+////////////////////////*/
+
+.gigs {
+    list-style: none;
+}
+
+    .gigs > li {
+        font-family: Nunito;
+        position: relative;
+        margin-bottom: 30px;
+    }
+
+    .gigs > li .date {
+        background: #ff4342;
+        color: #ffffff;
+        text-align: center;
+        width: 60px;
+        -ms-border-radius: 8px;
+        border-radius: 8px;
+    }
+
+        .gigs > li .date .month {
+            text-transform: uppercase;
+            font-size: 14px;
+            font-weight: bold;
+            padding: 2px 14px;
+        }
+
+        .gigs > li .date .day {
+            background: #eeeeee;
+            color: #3d3d3d;
+            font-size: 18px;
+            font-weight: 700;
+        }
+
+        .gigs > li .details {
+            position: absolute;
+            top: 0;
+            left: 70px;
+        }
+
+        .gigs > li .details .artist {
+            padding-top: 5px;
+            font-weight: bold;
+            display: block;
+        }
+
+        .gigs > li .details .genre {
+            font-size: 12px;
+        }
