--- a/GigHub/GigHub/Content/Site.css
+++ b/GigHub/GigHub/Content/Site.css
@@ -160,8 +160,11 @@ select.form-control {
         color: #ffffff;
         text-align: center;
         width: 60px;
-        -ms-border-radius: 8px;
-        border-radius: 8px;
+        
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
     }
 
         .gigs > li .date .month {
@@ -172,6 +175,8 @@ select.form-control {
         }
 
         .gigs > li .date .day {
+            border-bottom-left-radius: 8px;
+            border-bottom-right-radius: 8px;
             background: #eeeeee;
             color: #3d3d3d;
             font-size: 18px;
@@ -181,7 +186,7 @@ select.form-control {
         .gigs > li .details {
             position: absolute;
             top: 0;
-            left: 70px;
+            left: 80px;
         }
 
         .gigs > li .details .artist {
@@ -192,4 +197,5 @@ select.form-control {
 
         .gigs > li .details .genre {
             font-size: 12px;
+            color:#3d3d3d
         }
