--- a/GigHub/GigHub/Views/Shared/_Layout.cshtml
+++ b/GigHub/GigHub/Views/Shared/_Layout.cshtml
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">  
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,900|Montserrat:300,400,500,700|Monoton|Roboto+Mono:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - GigHub</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p align="center">&copy; @DateTime.Now.Year - Powered by <b>Exadel Developers School</b></p>
+            <p align="center">&copy; @DateTime.Now.Year - Made in <b>Exadel Developers School</b></p>
         </footer>
     </div>
 
