--- a/GigHub/GigHub/Views/Account/Login.cshtml
+++ b/GigHub/GigHub/Views/Account/Login.cshtml
@@ -31,7 +31,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-10">
-                        <div class="checkbox">
+                        <div class="checkbox" style="margin-left: 25px">
                             @Html.CheckBoxFor(m => m.RememberMe)
                             @Html.LabelFor(m => m.RememberMe)
                         </div>
