--- a/GigHub/GigHub/Views/Shared/_LoginPartial.cshtml
+++ b/GigHub/GigHub/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
         <ul class="nav navbar-nav navbar-right">
             <li class="notifications">
                 <a href="#">
-                    <i class="glyphicon glyphicon glyphicon-globe"></i>
+                    <i class="glyphicon glyphicon-bell js-animated-bell"></i>
                     <span class="badge js-notification-count hide"></span>
                 </a>
             </li>
