--- a/GigHub/GigHub/Content/site.less
+++ b/GigHub/GigHub/Content/site.less
@@ -358,3 +358,39 @@ div.checkbox label {
         display: none;
     }
 }
+
+#searchGigs {
+    margin-left: 40px;
+    margin-top: 25px;
+    width: 200px;
+
+    .form-control {
+        color: #ff9291;
+        font-size: 15px;
+        width: 252px;
+        border-top-left-radius: 12px;
+        border-bottom-left-radius: 12px;
+
+        &:focus::-webkit-input-placeholder {
+            color: #ff9291
+        }
+
+        &:focus:-ms-input-placeholder {
+            color: #ff9291
+        }
+
+        &:focus::-moz-placeholder {
+            color: #ff9291
+        }
+
+        &:focus:-moz-placeholder {
+            color: #ff9291
+        }
+    }
+
+    > .input-group-addon {
+        background-color: #e1e1e1;
+        border-bottom-right-radius: 12px;
+        border-top-right-radius: 12px;
+    }
+}
