--- a/GigHub/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/GigHub/Views/Shared/Gigs.cshtml
@@ -3,7 +3,19 @@
     ViewBag.Title = "Home";
 }
 
+
 <h2 class="heading">@Model.Heading</h2>
+@using (Html.BeginForm("Search", "Gigs"))
+{
+    <div class="form-group">
+        <div id="searchGigs" class="input-group">
+            @Html.TextBoxFor(m => m.Searchterm, new { @class = "form-control", placeholder="Search for genre, artist, venue...", autofocus = "true" })
+            <span class="input-group-addon">
+                <i class="glyphicon glyphicon-search"></i>
+            </span>
+        </div>
+    </div>
+}
 <ul class="gigs voffset30">
     @foreach (var gig in Model.UpComingGigs)
     {
@@ -33,7 +45,7 @@
                 }
             </div>
         </li>
-    }
+        }
 </ul>
 
 @section scripts
